--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5000
-MONGO_URI=mongodb+srv://24yashbari:Yash2002@cluster0.36poxc8.mongodb.net/auth-backend?retryWrites=true&w=majority
-JWT_SECRET=your_jwt_secret
+MONGO_URI="mongodb+srv://govindapatil46:govindaP%4046@cluster0.rewch.mongodb.net/user_auth"
+JWT_SECRET=govindaP@46
 CLIENT_URL=http://localhost:3000
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-email-password
+EMAIL_USER="govindapatil46@gmail.com"
+EMAIL_PASS="ljqpqpwhlxlpjgth"
