--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5000
-MONGO_URI="mongodb+srv://govindapatil46:govindaP%4046@cluster0.rewch.mongodb.net/user_auth"
-JWT_SECRET=govindaP@46
+MONGO_URI=""
+JWT_SECRET=
 CLIENT_URL=http://localhost:3000
-EMAIL_USER="govindapatil46@gmail.com"
-EMAIL_PASS="ljqpqpwhlxlpjgth"
+EMAIL_USER=""
+EMAIL_PASS=""
